# utils_n2oblife

./: .gitignore  .gitlab-ci.yml  README.md  build_package.bat  build_package.sh  pyproject.toml  requirement.txt  setup.py  test.bat  test.py  test.sh
.github/workflows/: ci.yml  version-update.yml
scripts/: filling_script.py
scripts/scripts/: filling_script.py  spinner.py  spinner.sh
scripts/template/: bew2.bat  curled.txt  input_parsing_linux.sh  input_parsing_windows.bat  web_parsing.bat
src/utils_n2oblife/: __init__.py
src/utils_n2oblife/CTF/: Socketer.py
src/utils_n2oblife/ComputerVision/: ImageDataset.py  ImageDataset_brouillon.py  ImageSegmentationbrouillon.py  MaskAttribution.py  MaskFiller.py  SAM_on_video.py  __init__.py  alpha_mask.py  common.py  cv2_video_computation.py  image_filtering.py  image_metrics.py
src/utils_n2oblife/ErrorHandling/: ErrorCatcher.py  __init__.py
src/utils_n2oblife/InterractionHandling/: ErrorCatcher.py  InputParser.py  ScriptUtils.py  ScriptsUtils.py  Versioning.py  __init__.py
src/utils_n2oblife/Machine_Learning/: BinaryConnect.py  DataLoader.py  DataLoaderPerso.py  Device.py  DeviceManager.py  EarlyStopper.py  Evaluate.py  GaussianNoise.py  InterruptHandler.py  KnowledgeDistillation.py  LocalDataloader.py  Metrics.py  Mixup.py  Testing.py  __init__.py  sgd_common.py
src/utils_n2oblife/Mathematics/: Geometry.py  __init__.py
src/utils_n2oblife/useful/: DependencyHandling.py  FileHandler.py  FileReader.py  Geometry.py  Sorting.py  utils.py
tests/useful/: test_sorting.py
(+13 files in other folders)
